# MarkIt

./: .gitignore  .gitmodules  .restyled.yaml  ARCHITECTURE.md  CMakeLists.txt  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FILE_STRUCTURE.md  LICENSE  README.md  build.cpp  clean.cpp  main.cpp  prereq.bat  resize.cpp  snapcraft.yaml  structure.txt  test.cpp
.github/workflows/: c-cpp.yml  ci.yml  codacy-analysis.yml  codeql-analysis.yml  release.yml
.github/workflows/Alpine/: Dockerfile
.github/workflows/Archlinux/: Dockerfile
.github/workflows/CentOS/: Dockerfile
.github/workflows/Debian/: Dockerfile
.github/workflows/Fedora/: Dockerfile
.github/workflows/Kali/: Dockerfile
.github/workflows/openSUSE-leap/: Dockerfile
.github/workflows/openSUSE-tumbleweed/: Dockerfile
include/: CMakeLists.txt  backend.h  cli.h  cloudFunctions.h  fileHandlers.h  globalVariable.h  logger.h  panel.h  panels.h  sha256.cpp  sha256.h  structure.h  toggles.h  toggles.h.in
include/tabulate/: tabulate.hpp
lib/: libcurl.lib  pdcurses.lib
src/: cli.hpp  main.cpp
src/backend/: backend.cpp
src/panels/: panels.cpp
src/utils/: cli.cpp  cloudFunctions.cpp  fileHandlers.cpp  globalVariable.cpp  sha256.cpp
tools/: build.cpp  clean.cpp  main  prereq.bat
